﻿23.8.27.2
=========
 + Removed assertion for D3D11 Immediate Device Context equivalency during
     ImGui rendering, some mods will break this assumption without crashing.

23.8.27.1
=========
 + Fixed "Bad Format" warning that may appear in some D3D11 games that use
     DirectX Video for decoding their FMV cutscenes (i.e. NieR: Replicant).
 + Low-Spec Mode is automatically disabled if a user has texture mods installed.
 
23.8.27
=======
 + Optimized stack memory usage for D3D11 state block recording
 + Removed a few applications from the strictest level of injection blacklist

23.8.26.2
=========
 + Removed unnecessary call to AllowSetForegroundWindow (...) during init.

23.8.26.1
=========
 + Added Baldur's Gate HUD shaders to internal list for HUD toggle / HUDless
     screenshots
 + Only ask to enable Vulkan Bridge when launching the -Vulkan- version of BG3

23.8.26
=======
 + Post-multiply alpha in sRGB gamma for HDR10
 + Changed UI alpha -output- while in scRGB HDR mode to use sRGB gamma
 + Improved support for rendering widgets while global UI scale is > 1.0
 + Switched to pre-multiplied alpha for ImGui rendering in D3D11/12/Vulkan/GL
 + Reverted FCAT bars back to all vertical and wider
 + Merge pull request #80 from Aemony/main
    * Bypass EAC for Armored Core VI
 + Merge pull request #72 from Nustat0/dgvoodoo-d3d12
    * Fixed GUI not showing up when bootstrapping dgVoodoo (D3D12)

23.8.22
=======
 + Updated HDR Profile 0 to use .96 gamma by default
 + Changed HDR Gamut Expansion to use D65 white instead of D60

23.8.21
=======
 + Updated HDR Profile 0 for new gamut unclamped HDR processing
     >> This profile targets 534 nits
 + Moved the old HDR Profile 0 defaults to Profile 1 (570 nits)
 + Disabled Raw Input caching because it breaks keyboard input in some games

23.8.19.1
=========
 + Fixed Baldur's Gate 3 game detection only testing the Vulkan executable
 + Fixed Baldur's Gate 3 alt-tab flakiness (do not use Multitasking On Top)

23.8.19
=======